--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -10,7 +10,7 @@
             <div class="d-flex flex-column justify-content-center text-center bg-primary h-100 p-3">
               <h1 class="text-white">10</h1>
               <h2 class="text-white">Years</h2>
-              <h5 class="text-white mb-0">Experience</h5>
+              <h5 class="text-white mb-0">of Experience</h5>
             </div>
           </div>
         </div>
@@ -27,9 +27,7 @@
             We specialise in low cost building work.
           </p>
           <p class="mb-4">
-            Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit.
-            Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit,
-            sed stet lorem sit clita duo justo magna dolore erat amet
+            Best solutions
           </p>
           <div class="border-top mt-4 pt-4">
             <div class="row g-4">
