--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -10,7 +10,7 @@
             <div class="d-flex flex-column justify-content-center text-center bg-primary h-100 p-3">
               <h1 class="text-white">10</h1>
               <h2 class="text-white">Years</h2>
-              <h5 class="text-white mb-0">of Experience</h5>
+              <h5 class="text-white mb-0">of Experience.</h5>
             </div>
           </div>
         </div>
